adds deploy and css

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "storefront",
   "version": "0.1.0",
   "private": true,
-  "homepage": "",
+  "homepage": "https://tanner253.github.io/Virtual-store-REDUX/",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
